test/link/script-unterminated-string.out
error: Unterminated string
    at script-unterminated-string.link(2)
error: Unterminated string
    at script-unterminated-string.link(4)
error: Unterminated string
    at script-unterminated-string.link(5)
Linking failed with 3 errors
