test/link/script-unterminated-string.link
rom0
	"ROM0
romx 2
	"ROM2 1K
	"ROM2 1
